typescript/checker/tests/conformance/statements/withStatements/withStatements.ts.stderr
error: With statement are not allowed in strict mode
 --> $DIR/tests/conformance/statements/withStatements/withStatements.ts:2:1
  |
2 | with (x) {
  | ^^^^

